<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context=".view.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView style="@style/LoginImageStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/sign_up_label"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/_10dp">

            <EditText
                android:id="@+id/et_username"
                style="@style/EditTextStyle"
                android:hint="@string/username_label" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_email"
                style="@style/EditTextStyle"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_phone"
                style="@style/EditTextStyle"
                android:hint="@string/phone_label"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:hint="@string/password_label"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/EditTextStyle"
                android:hint="@string/confirm_password_label"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/are_you_label"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_farmer"
            android:orientation="horizontal"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/rb_farmer"
                style="@style/RadioButtonStyle"
                android:text="@string/farmer_label" />

            <RadioButton
                android:id="@+id/rb_vendor"
                style="@style/RadioButtonStyle"
                android:text="@string/vendor_label" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/sign_up_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/have_account_label" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/SignLoginStyle"
            android:text="@string/login_label" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>