<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView style="@style/LoginImageStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textSize="@dimen/medium_text_size" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/et_email"
                style="@style/EditTextStyle"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:hint="@string/password_label"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/login_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/SignLoginStyle"
            android:text="@string/sign_up_label" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>