<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            style="@style/LoginImageStyle"
            android:layout_marginBottom="@dimen/_10dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_message"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/btn_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10dp"
            android:text="@string/login_signup_label"
            android:textAllCaps="false"
            android:textColor="@color/color_pink_500"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>